#21 Implement Calendar page
